Fix HTML encoding issues in index.html
Simple labelling for currencies

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
         <p class="subtitle">Calculate the capital needed to achieve your financial goals and live life on your terms</p>
 
         <div class="currency-selector">
-            <button class="currency-btn active" onclick="setCurrency('GBP')" id="btn-GBP">🇬🇧 UK (£)</button>
-            <button class="currency-btn" onclick="setCurrency('USD')" id="btn-USD">🇺🇸 US ($)</button>
-            <button class="currency-btn" onclick="setCurrency('EUR')" id="btn-EUR">🇪🇺 Europe (€)</button>
+            <button class="currency-btn active" onclick="setCurrency('GBP')" id="btn-GBP">UK (£)</button>
+            <button class="currency-btn" onclick="setCurrency('USD')" id="btn-USD">US ($)</button>
+            <button class="currency-btn" onclick="setCurrency('EUR')" id="btn-EUR">EU (€)</button>
         </div>
 
         <div class="definition-section">
